# atlas-gtm

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  package.json  task.md
mcp-servers/: Dockerfile  pyproject.toml
mcp-servers/atlas_gtm_mcp/: __main__.py  rest_api.py  server.py
mcp-servers/atlas_gtm_mcp/attio/: __init__.py  logging.py  models.py
mcp-servers/atlas_gtm_mcp/evaluation/: RAG_EVALUATION_ARCHITECTURE.md  __init__.py  cli.py  config.py  seed_test_data.py
mcp-servers/atlas_gtm_mcp/evaluation/datasets/: __init__.py  icp_rules_golden.json  loader.py  market_research_golden.json  objection_handlers_golden.json  response_templates_golden.json
mcp-servers/atlas_gtm_mcp/evaluation/evaluators/: __init__.py  collection_evaluator.py  qdrant_evaluator.py
mcp-servers/atlas_gtm_mcp/evaluation/reporters/: __init__.py  json_reporter.py  langfuse_reporter.py
mcp-servers/atlas_gtm_mcp/heyreach/: __init__.py  client.py  logging.py  models.py
mcp-servers/atlas_gtm_mcp/qdrant/: __init__.py
mcp-servers/atlas_gtm_mcp/verticals/: __init__.py  models.py  tools.py
mcp-servers/tests/attio/: __init__.py  conftest.py  test_errors.py  test_models.py  test_tools.py
mcp-servers/tests/heyreach/: __init__.py  conftest.py  test_models.py  test_tools.py
mcp-servers/tests/integration/: test_attio_integration.py
mcp-servers/tests/unit/: test_attio_models.py  test_attio_tools.py
nginx/: nginx.conf
prompts/: claude-code-sessions.md
scripts/: init-qdrant.ts  kill-ports.sh  test-meeting-prep.sh
(+16 files in other folders)
