[project]
name = "atlas-gtm-mcp"
version = "0.1.0"
description = "MCP servers for Atlas GTM - Qdrant, Attio, Instantly integrations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "qdrant-client>=1.9.0",
    "httpx>=0.27.0",
    "voyageai>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
evaluation = [
    "ragas>=0.1.0",
    "langfuse>=2.0.0,<3.0.0",  # Pin to v2 to avoid v3 breaking API changes
    "langchain-openai>=0.1.0",
    "datasets>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
